--- a/src/widgets/TrackMapWidget/TrackMapSvg/TrackMapSvg.module.scss
+++ b/src/widgets/TrackMapWidget/TrackMapSvg/TrackMapSvg.module.scss
@@ -9,12 +9,3 @@
   pointer-events: none;
   opacity: 0.8;
 }
-
-.sfLabel {
-  font-family: $font-widget;
-  font-size: ws(20);
-  font-weight: 700;
-  fill: white;
-  letter-spacing: 0.05em;
-  opacity: 0.85;
-}
